Closed
Bug 78846
Opened 24 years ago
Closed 24 years ago
Lost focus isn't sent to plugins
Categories
(Core Graveyard :: Plug-ins, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.2
People
(Reporter: peterlubczynski-bugs, Assigned: peterlubczynski-bugs)
References
()
Details
(Whiteboard: [seeking review])
Attachments
(1 file)
3.75 KB,
patch
|
Details | Diff | Splinter Review |
As a regression from the patch in bug 68756, lost focus isn't correctly being
sent to plugins.
Reason:
Typo:
We should use NS_BLUR_CONTENT instead of NS_LOSTFOCUS in the switch statement.
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P3
Whiteboard: [fix-in-hand]
Target Milestone: --- → mozilla0.9.1
Comment 1•24 years ago
|
||
peter, is 78414 not the same problem ?
Assignee | ||
Comment 3•24 years ago
|
||
I'm attaching a patch which should do this correctly. It's in Mac only code
as I believe on Windows and Linux focus is handled through child
windows. Do you you think I should move the code up to where the DOM
calls focus?
I added a public weak ref to the PresContext in nsObjectFrame. I don't see
any reason why it's any better to use a get/setter in this situation. In there
another way I can get the presshell from either an nsIContent
(nsHTMLObjectElement) or the frame (nsHTMLContainerFrame)?
cc:ing some people for reviews
Keywords: patch
Whiteboard: [fix-in-hand] → [seeking review]
Assignee | ||
Comment 4•24 years ago
|
||
Comment 5•24 years ago
|
||
[s]r=attinasi - patch looks good, and I'm assuming you have tested that it works
correctly.
Assignee | ||
Comment 6•24 years ago
|
||
Tested on Mac and Windows. Windows isn't much of an issue because this code path
is Mac only.
Don, can I get a code review?
Comment 8•24 years ago
|
||
r=dcone
Assignee | ||
Comment 9•24 years ago
|
||
Patch checked in. Marking FIXED.
/cvsroot/mozilla/layout/html/base/src/nsObjectFrame.cpp,v <--
nsObjectFrame.cpp
new revision: 1.215; previous revision: 1.214
done
Checking in nsObjectFrame.h;
/cvsroot/mozilla/layout/html/base/src/nsObjectFrame.h,v <-- nsObjectFrame.h
new revision: 1.5; previous revision: 1.4
Assignee | ||
Comment 10•24 years ago
|
||
Marking FIXED for real this time.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 11•24 years ago
|
||
Verified on mac 20010517. Was able to use arrow key and command keys after I
clicked outside the plugin area.
Status: RESOLVED → VERIFIED
Comment 12•21 years ago
|
||
Please see bug 247140. I'm not sure if that problem (which has actually been
around for ages) is a regression of this one - but I'm sure it's related.
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•