Fix for lost focus for plugins on mac bug 78846 sr=attinasi r=dcone